Cambios REAME en branch Prueba

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
 “Cada minuto de nuestras vidas, es una oportunidad para cambiarlo todo....” 
 
 “¿Y que es la vida sino la persecución de un sueño?”
+
+4 de Septiembre 2014
