Cambios al archivo README, se agregó fecha

--- a/README
+++ b/README
@@ -2,4 +2,4 @@
 
 “¿Y que es la vida sino la persecución de un sueño?”
 
-test
+5 de Septiembre del 2014 5 de Septiembre del 2014 5 de Septiembre del 2014 5 de Septiembre del 2014 5 de Septiembre del 2014 
