Cambios al archivo README en branch master

--- a/README
+++ b/README
@@ -2,4 +2,4 @@
 
 “¿Y que es la vida sino la persecución de un sueño?”
 
-5 de Septiembre del 2014 5 de Septiembre del 2014 5 de Septiembre del 2014 5 de Septiembre del 2014 5 de Septiembre del 2014 
+5 de Septiembre del 2014
